SplCompiler/tests/errors/var_identifier_too_long.spl
VarIdentifierTooLong:
DECLARATIONS
    a OF TYPE INTEGER;
    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb OF TYPE INTEGER;
    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbc OF TYPE INTEGER;
CODE
    NEWLINE;
ENDP IdentifierTooLong.
